Add Schema for RabbitMQ
